lab1/Test/L1-A-12-17.output
Error Type A at Line 1
Error Type B at Line 5
Error Type B at Line 15
Error Type A at Line 23
Error Type A at Line 23
Error Type A at Line 34
Error Type B at Line 36
Error Type A at Line 41
