lab1/Test/L1-A-12-17.cmm
struct \{
  float FQbCXY9UOERx = G0qihb || p2r7n && If7xmR > 
    JGZpe6BMkwYN + JRU09F5ZQ5PpQ / QYG8v ( AkjITB0Py4ix 
    = BX4dyvbsicQ = GRIKbYKd4Ojc != P0WUxfw00s - ! - ! 
    dhwnxbzS7 [ || kAyzfo6vyczuN <= - ( n22Gz >= - ( ORnrs_kCk754nfmfCI7J 
    ( f , mKWZ ) = QJpBJXfCkTfQdtQr ) ) * - 1725700708.741139058 
    == vdAYgxj3KqiU < - 794345093 . MV8D25X1cWMbL3 * uN1Fr8w5Ni9O8lnxCWyG 
    ( ) ] ) , HovKu1nbljtQo_Yp [ 884768594 ] ;
}ob 
;
int ;
int ;
struct A7EkfTy8IzecNvB {
  struct Y l6NGMwr4F 
}IK 
;
struct L1fNh MmFuqALsT3h4p6 , EGq2vaJryu1cw 

;
int AMlY7P1LTBu ( ) {
}
int ;
&int Ga6OM0aKLtjtd ( int vp1Ghf4SjM_sTA ', int QNPuh63GSSugzdX 
  ) {
}
int ;
int FumBHCiK7uYJyUuQjKI ( int TA0sRU5dyEdMQuVx ) {
  eQh7clz ;
  if ( PDzzds8_lsOS4yQUh9lv ) {
  }
}
int gBKg5lQ_8ntUYWG2 ( ) {
  if ( PIEYNFZfqXjAHbjH1L )   i2UH_jasF2PiQwi2 ;
else   if ( #dd2KvqV38cXvhK )   if ( MT )   Oi8PF_UJKyet 
    ;
else   while ( _NOnM39pQYOSVqHS )   return ;




&}
